// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/permission_schemes_settings/permission_schemes_settings should match snapshot loading 1`] = `
<LoadingScreen
  position="relative"
  style={Object {}}
/>
`;

exports[`components/admin_console/permission_schemes_settings/permission_schemes_settings should match snapshot with schemes 1`] = `
<div
  className="wrapper--fixed"
>
  <h3
    className="admin-console-header"
  >
    <FormattedMessage
      defaultMessage="Permission Schemes"
      id="admin.permissions.permissionSchemes"
      values={Object {}}
    />
  </h3>
  <div
    className="banner info"
  >
    <div
      className="banner__content"
    >
      <span>
        <FormattedMessage
          defaultMessage="Permission Schemes set the default permissions for Team Admins, Channel Admins and everyone else. Learn more about permission schemes in our documentation."
          id="admin.permissions.introBanner"
          values={Object {}}
        />
      </span>
    </div>
  </div>
  <div
    className="permissions-block"
  >
    <div
      className="header"
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="System Scheme"
            id="admin.permissions.systemSchemeBannerTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <FormattedMessage
            defaultMessage="Set the default permissions inherited by all teams unless a Team Override Scheme is applied."
            id="admin.permissions.systemSchemeBannerText"
            values={Object {}}
          />
        </span>
      </div>
      <div
        className="button"
      >
        <Link
          className="btn btn-primary"
          replace={false}
          to="/admin_console/permissions/system-scheme"
        >
          <FormattedMessage
            defaultMessage="Edit Scheme"
            id="admin.permissions.systemSchemeBannerButton"
            values={Object {}}
          />
        </Link>
      </div>
    </div>
  </div>
  <div
    className="permissions-block"
  >
    <div
      className="header"
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="Team Override Schemes"
            id="admin.permissions.teamOverrideSchemesTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <FormattedMessage
            defaultMessage="Use when specific teams need permission exceptions to the System Scheme."
            id="admin.permissions.teamOverrideSchemesBannerText"
            values={Object {}}
          />
        </span>
      </div>
      <div
        className="button"
      >
        <Link
          className="btn btn-primary"
          replace={false}
          to="/admin_console/permissions/team-override-scheme"
        >
          <FormattedMessage
            defaultMessage="New Team Override Scheme"
            id="admin.permissions.teamOverrideSchemesNewButton"
            values={Object {}}
          />
        </Link>
      </div>
    </div>
    <Connect(PermissionsSchemeSummary)
      key="id-1"
      scheme={
        Object {
          "description": "Test description 1",
          "id": "id-1",
          "name": "Test 1",
        }
      }
    />
    <Connect(PermissionsSchemeSummary)
      key="id-2"
      scheme={
        Object {
          "description": "Test description 2",
          "id": "id-2",
          "name": "Test 2",
        }
      }
    />
    <Connect(PermissionsSchemeSummary)
      key="id-3"
      scheme={
        Object {
          "description": "Test description 3",
          "id": "id-3",
          "name": "Test 3",
        }
      }
    />
  </div>
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_schemes_settings should match snapshot without schemes 1`] = `
<div
  className="wrapper--fixed"
>
  <h3
    className="admin-console-header"
  >
    <FormattedMessage
      defaultMessage="Permission Schemes"
      id="admin.permissions.permissionSchemes"
      values={Object {}}
    />
  </h3>
  <div
    className="banner info"
  >
    <div
      className="banner__content"
    >
      <span>
        <FormattedMessage
          defaultMessage="Permission Schemes set the default permissions for Team Admins, Channel Admins and everyone else. Learn more about permission schemes in our documentation."
          id="admin.permissions.introBanner"
          values={Object {}}
        />
      </span>
    </div>
  </div>
  <div
    className="permissions-block"
  >
    <div
      className="header"
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="System Scheme"
            id="admin.permissions.systemSchemeBannerTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <FormattedMessage
            defaultMessage="Set the default permissions inherited by all teams unless a Team Override Scheme is applied."
            id="admin.permissions.systemSchemeBannerText"
            values={Object {}}
          />
        </span>
      </div>
      <div
        className="button"
      >
        <Link
          className="btn btn-primary"
          replace={false}
          to="/admin_console/permissions/system-scheme"
        >
          <FormattedMessage
            defaultMessage="Edit Scheme"
            id="admin.permissions.systemSchemeBannerButton"
            values={Object {}}
          />
        </Link>
      </div>
    </div>
  </div>
  <div
    className="permissions-block"
  >
    <div
      className="header"
    >
      <div>
        <h3>
          <FormattedMessage
            defaultMessage="Team Override Schemes"
            id="admin.permissions.teamOverrideSchemesTitle"
            values={Object {}}
          />
        </h3>
        <span>
          <FormattedMessage
            defaultMessage="Use when specific teams need permission exceptions to the System Scheme."
            id="admin.permissions.teamOverrideSchemesBannerText"
            values={Object {}}
          />
        </span>
      </div>
      <div
        className="button"
      >
        <Link
          className="btn btn-primary"
          replace={false}
          to="/admin_console/permissions/team-override-scheme"
        >
          <FormattedMessage
            defaultMessage="New Team Override Scheme"
            id="admin.permissions.teamOverrideSchemesNewButton"
            values={Object {}}
          />
        </Link>
      </div>
    </div>
    <div
      className="no-team-schemes"
    >
      <FormattedMessage
        defaultMessage="No team override schemes created."
        id="admin.permissions.teamOverrideSchemesNoSchemes"
        values={Object {}}
      />
    </div>
  </div>
</div>
`;
